Fix Moj logo margin on mobile devices.
Fixed an issue where the Moj logo would not have a bottom margin on mobile devices.

--- a/src/styles/Home/MyWork.css
+++ b/src/styles/Home/MyWork.css
@@ -105,4 +105,8 @@
   .skill .icon {
     font-size: 2rem;
   }
+
+  .mywork-mojlogo {
+    margin-bottom: 10%;
+  }
 }
